# hunyuan-mt-rust

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  build-cuda.bat
.github/workflows/: release.yml
scripts/: test_model.py
src/: hunyuan_model.rs  main.rs
