[package]
name = "hunyuan-infer"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.9", features = ["cuda"] }

[dependencies]
candle-transformers = "0.9"
candle-nn = "0.9"
tokenizers = "0.20"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = { version = "2.5", features = ["std", "bytemuck"] }
candle-core = { version = "0.9", features = ["metal"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
