[package]
name = "hunyuan-infer"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { path = "third_party/candle/candle-core", features = ["metal"] }
candle-nn = { path = "third_party/candle/candle-nn", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { path = "third_party/candle/candle-core", features = ["cuda"] }
candle-nn = { path = "third_party/candle/candle-nn", features = ["cuda"] }

[dependencies]
candle-transformers = { path = "third_party/candle/candle-transformers" }
tokenizers = "0.20"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = { version = "2.5", features = ["std", "bytemuck"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
